# Veilsreach

./: .gitignore  LICENSE  README.md  build.bat  pyproject.toml  requirements.txt
src/: appstate.py  events.py  main.py
src/controllers/: exporter.py
src/resources/: icons.py  meshlogic.py  stlloader.py  tilemesh.py
src/thumbnails/: thumbcache.py  thumbgen.py
src/window/: bottombar.py  mainwindow.py  menubar.py  sidebar.py  toggelistwidget.py  worldwidget.py
src/world/: world.py  worldcamera.py  worldobject.py
